--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,63 @@
 
-$yellow: #ffea00;
-$blue: #0e67cf;
-$dark: #202020;
-$gray: #605e41;
-
 $contentMaxWidth: 1360px;
 $contentPadding: 0 20px;
+
+//== Colors
+//
+//## Gray and brand colors for use across theme.
+$dark:                   #202020;
+$black:                  #141414;
+$gray:                   #605e41;
+$gray-light:             #EBEBEB;
+$gray-lighter:           #F7F7F7;
+$white:                  #FFFFFF;
+$yellow:                 #ffea00;
+$blue:                   #0e67cf;
+$red:                    #ff0048;
+$lime:                   #DBFF00;
+//== Typography
+//
+//## Font, line-height, and color for body text, headings, and more.
+
+$font-family-sans-serif:  "Poppins", "Aktiv Grotesk Medium", sans-serif;
+$font-family-serif:       "Asar",Georgia, "Times New Roman", Times, serif;
+$font-family-base:        $font-family-sans-serif;
+
+$font-size-xsmall:		    12px;
+$font-size-small:         14px;
+$font-size-medium:		    16px;
+$font-size-base:          1rem;
+$font-size-large:         24px;
+$font-size-xlarge:        48px;
+
+$font-size-h1:            48px;
+$font-size-h2:            36px; 
+$font-size-h3:            28px; 
+$font-size-h4:            16px; 
+$font-size-h5:            14px;
+$font-size-h6:            10px; 
+
+$font-weight-normal:     normal;
+$font-weight-bold:       600;
+
+$line-height-base:        1.1;
+$line-height-computed:    floor(($font-size-base * $line-height-base));
+
+// Functional Colors
+$brand-primary:             $yellow;
+$body-bg:                   $white;
+$text-color:                $black;
+$text-color-inverse:        $gray-light;
+$link-color:                $blue;
+$button-color:              $lime;
+//Layout
+$max-width: 1280px;
+
+// Spacing
+$gutter-padding: 12px; 
+
+// Breakpoints
+$mobile-breakpoint: 768px;
+$tablet-breakpoint: 1024px;
+
+$tablet-padding: 40px;
